RP-961 Address SonarQube feedback